# AISaturdays-final-project

./: .gitignore  Data sources.docx  Proyecto_TuAIbuelaDeConfianza.pptx  README.md  ROADMAP - ACTION ITEMS.docx  agents.py  agents_v2.py  create_catalog_db.py  iabuela-route-optimizer.html  iabuela_catalog.db  iabuela_export.json  iabuela_mvp.db  lA_abuela.py  my_apikey.json  ppt.py  presentation_link.txt  pyproject.toml  ~$Proyecto_TuAIbuelaDeConfianza.pptx
